--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/reserva/reserva.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/reserva/reserva.component.html
@@ -13,4 +13,9 @@
   <input type="email" id="email"/>
   <p>cantidad personas: {{cantidad_personas}}</p>
   <button (click)="realizar_reserva()">Reservar</button>
+  <div id="resultado_reserva" style="border:2px solid red; margin:15px;">
+    <p>codigo reserva: {{reserva.codigo}}</p>
+    <p>nro telefono: {{reserva.infoReserva.hotel.nroTelefono}}</p>
+    <p>info: {{reserva.infoReserva.hotel.infoDeContacto}}</p>
+  </div>
 </div>
