--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">WebApplication5</a>
+      <a class="navbar-brand" [routerLink]="['/']">Uruguay Natural</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -20,19 +20,11 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li class="nav-item"
-              [routerLinkActive]="['link-active']"
-              [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/consulta']">Consulta Reserva</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/prueba']">prueba</a>
+            <a class="nav-link text-dark" [routerLink]="['/']">Login</a>
           </li>
         </ul>
       </div>
