--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,8 +23,11 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/consulta']">Consulta Reserva</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/']">Login</a>
+          <li class="nav-item" [routerLinkActive]="['link-active']" id="login">
+            <a class="nav-link text-dark" [routerLink]="['/ingresar']">Login</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']" id="admin">
+            <a style="color:blue" class="nav-link" [routerLink]="['/admin_panel']">Administracion</a>
           </li>
         </ul>
       </div>
