Alta punto turistico

--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/admin-panel/admin-panel.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/admin-panel/admin-panel.component.html
@@ -2,7 +2,7 @@
 <div>
   <div>
     <h2>Punto Turistico</h2>
-    <a>Alta punto turistico</a>
+    <a [routerLink]="['/alta_punto']">Alta punto turistico</a>
   </div>
   <div>
     <h2>Hospedaje</h2>
