--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/admin-panel/admin-panel.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/admin-panel/admin-panel.component.html
@@ -6,12 +6,12 @@
   </div>
   <div>
     <h2>Hospedaje</h2>
-    <a>Alta hospedaje</a> <br />
-    <a>Borrar hospedaje</a><br />
-    <a>Modificar capacidad hospedaje</a><br />
+    <a [routerLink]="['/alta_hotel']">Alta hospedaje</a> <br />
+    <a [routerLink]="['/borrar_hotel']">Borrar hospedaje</a><br />
+    <a [routerLink]="['/modificar_hotel']">Modificar capacidad hospedaje</a><br />
   </div>
   <div>
     <h2>Reservas</h2>
-    <a>Cambiar estado reserva</a><br />
+    <a [routerLink]="['/modificar_reserva']">Cambiar estado reserva</a><br />
   </div>
 </div>
