Interfaz borrar hospedaje

--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/borrar-hotel/borrar-hotel.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/borrar-hotel/borrar-hotel.component.html
@@ -1,3 +1,5 @@
 <h1>Borrar Hotel</h1>
-
+<input type="text" id="hotel" placeholder="Nombre del Hotel"/>
+<button (click)="eliminar()">Eliminar Hotel</button>
+<h3>{{mensaje_server}}</h3>
 
