--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/home/home.component.css
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/home/home.component.css
@@ -1,3 +1,13 @@
-div{
-    border:2px solid black;
+.regiones {
+  display: flex;
+  flex-direction: column;
+  text-align:center;
+  margin: 40px 0px;
 }
+
+  .regiones * {
+    margin: 5px;
+    font-size: larger;
+    color: coral;
+  }
+
