--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/home/home.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/home/home.component.html
@@ -1,14 +1,14 @@
-<div>
-  <h1>Regiones</h1>
-  <div>
-    <a [routerLink]="['puntos',0]">{{regiones[0]}}</a>
-    <br />
-    <a [routerLink]="['puntos',1]">{{regiones[1]}}</a>
-    <br />
-    <a [routerLink]="['puntos',2]">{{regiones[2]}}</a>
-    <br />
-    <a [routerLink]="['puntos',3]">{{regiones[3]}}</a>
-    <br />
-    <a [routerLink]="['puntos',4]">{{regiones[4]}}</a>
-  </div>
+
+<h1 style="text-align:center">Regiones</h1>
+<div class="regiones">
+  <a [routerLink]="['puntos',0]">{{regiones[0]}}</a>
+  <br />
+  <a [routerLink]="['puntos',1]">{{regiones[1]}}</a>
+  <br />
+  <a [routerLink]="['puntos',2]">{{regiones[2]}}</a>
+  <br />
+  <a [routerLink]="['puntos',3]">{{regiones[3]}}</a>
+  <br />
+  <a [routerLink]="['puntos',4]">{{regiones[4]}}</a>
 </div>
+
