--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/modificar-hotel/modificar-hotel.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/modificar-hotel/modificar-hotel.component.html
@@ -1,10 +1,11 @@
 <h1>Modificar Hotel</h1>
 <input type="text" id="hotel" placeholder="Nombre del Hotel"/>
+<br />
 <select id="disponibilidad">
   <option selected disabled>Disponibilidad</option>
   <option value="true">Si</option>
   <option value="false">No</option>
-</select>
+</select><br />
 <button (click)="enviar()">Enviar</button>
 <h3>{{mensaje_server}}</h3>
 
