Front para el reporte A

--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/admin-panel/admin-panel.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/admin-panel/admin-panel.component.html
@@ -13,5 +13,6 @@
   <div>
     <h2>Reservas</h2>
     <a [routerLink]="['/modificar_reserva']">Cambiar estado reserva</a><br />
+    <a [routerLink]="['/reporte_a']" >Reporte A</a>
   </div>
 </div>
