Listo front-end para calficar hoteles

--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -21,6 +21,9 @@
       >
         <ul class="navbar-nav flex-grow">
           <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/puntuar']">Puntuar</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/consulta']">Consulta Reserva</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']" id="login">
