Puntuacion por hotel
Ahora se muestran las puntuaciones de cada hotel

--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/hospedajes/hospedajes.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/hospedajes/hospedajes.component.html
@@ -35,6 +35,7 @@
     <p>Precio noche: {{hotel.alojamiento.precioNoche}}$</p>
     <p>Descripcion: {{hotel.alojamiento.descripcion}}</p>
     <p>Precio final: {{hotel.precioTotal}}$</p>
+    <p> <b>Puntaje: {{hotel.puntaje}}</b></p>
     <button (click)="reservar(hotel.alojamiento)" class="horizontal">Reservar</button>
   </div>
 </div>
