Fix mostrar region

--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/puntos/puntos.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/puntos/puntos.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>Region {{region_n}}</h1>
+  <h1>Region {{region_show}}</h1>
   <h3>Puntos Turisticos</h3>
   <div class="filtro">
       <p>Categorias </p>
