Fix error compilacion

--- a/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/reserva/reserva.component.html
+++ b/ObligatorioDDA2/ObligatorioDDA2/ClientApp/src/app/reserva/reserva.component.html
@@ -16,7 +16,7 @@
   <div id="resultado_reserva" style="border:2px dashed coral; margin:15px; padding:10px; width:350px;">
     <h4>Reserva</h4>
     <p>codigo reserva: {{reserva.codigo}}</p>
-    <p>nro telefono: {{reserva.infoReserva.hotel.nroTelefono}}</p>
-    <p>info: {{reserva.infoReserva.hotel.infoDeContacto}}</p>
+    <p>nro telefono: {{reserva.InfoReserva.hotel.nroTelefono}}</p>
+    <p>info: {{reserva.InfoReserva.hotel.infoDeContacto}}</p>
   </div>
 </div>
